--- a/templates/aboutdaniel.html
+++ b/templates/aboutdaniel.html
@@ -5,29 +5,65 @@
 <head>
     <meta charset="UTF-8">
     <title>Daniel Bertino</title>
+    {% block background %}
+        <style>
+            html, body{
+                background-color: lightgreen;
+            }
+        </style>
+    {% endblock %}
 </head>
 {%  block body %}
     <body>
     <div class="row">
         <div class="col-sm">
             <h1>Daniel</h1>
-            <img src="/static/assets/nathan2.jpg" width="50%"  id="danielimg" onclick="danielImg()" >
+            <img src="/static/assets/danielno.jpg" width="50%"  id="danielImg" onclick="danielImg()" >
         </div>
         <div class="col-sm">
             <h1>API</h1>
+            <p>TITLE</p>
+            <div id="title"></div>
+            <br>
+            <p>URL</p>
+            <div id="url"></div>
+            <br>
+            <h1>Links</h1>
+            <a href="https://docs.google.com/document/d/1243B2mbRGslTk-0YRXKdKykfs6fAU5pK1LFUyJQ83vM/edit">Create Task Planning</a>
+            <br>
+            <a href="https://docs.google.com/document/d/12rQvrhtsNnlDFDhkCI9sT8w7fTD3y-4FW6W8LPLuf9w/edit">Journal</a>
+
+            <script>
+                async function getAstroNews() {
+                    const response = await fetch("https://space-news.p.rapidapi.com/news/guardian", {
+                        "method": "GET",
+                        "headers": {
+                            "x-rapidapi-host": "space-news.p.rapidapi.com",
+                            "x-rapidapi-key": "92b9f4e31cmsh02f34db44282758p14191cjsndd8b61d87098"
+                        }
+                    })
+                    console.log(response);
+                    const astroNew = await response.json();
+                    console.log(astroNew);
+                    const astroNews = astroNew[0];
+                    document.getElementById("title").textContent = astroNews["title"];
+                    document.getElementById("url").textContent = astroNews["url"];
+                }
+                getAstroNews();
+            </script>
         </div>
     </div>
     <script>
-        var DanielVar = 0;
-        function ReemImg () {
-            const element = document.getElementById("Danielimg");
-            if (DanielVar == 0) {
-                element.src = "/static/assets/nathan1.jpg";
-                ReemVar = 1
+        var danielVar = 0;
+        function danielImg () {
+            const element = document.getElementById("danielImg");
+            if (danielVar == 0) {
+                element.src = "/static/assets/danielno.jpg";
+                danielVar = 1
             }
             else {
-                element.src = "/static/assets/nathan2.jpg";
-                DanielVar = 0;
+                element.src = "/static/assets/danielyes.jpg";
+                danielVar = 0;
             }
         }
     </script>
