--- a/templates/aboutnathan.html
+++ b/templates/aboutnathan.html
@@ -5,6 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Nathan</title>
+    {% block background %}
+        <style>
+            html, body{
+                background-color: red;
+            }
+        </style>
+    {% endblock %}
 </head>
 {%  block body %}
 <body>
@@ -15,6 +22,39 @@
     </div>
     <div class="col-sm">
         <h1>API</h1>
+        <p>TOTAL DEATHS:</p>
+        <div id="deaths"></div>
+        <br>
+        <p>CONFIRMED CASES:</p>
+        <div id="confirmed"></div>
+        <br>
+        <p>RECOVERED CASES:</p>
+        <div id="recovered"></div>
+        <br>
+        <h1>Links</h1>
+        <a href="https://docs.google.com/document/d/1243B2mbRGslTk-0YRXKdKykfs6fAU5pK1LFUyJQ83vM/edit">Create Task Planning</a>
+        <br>
+        <a href="https://docs.google.com/document/d/12rQvrhtsNnlDFDhkCI9sT8w7fTD3y-4FW6W8LPLuf9w/edit">Journal</a>
+
+        <script>
+            async function getcovid() {
+                const response = await fetch("https://covid-19-data.p.rapidapi.com/totals?format=json", {
+                    "method": "GET",
+                    "headers": {
+                        "x-rapidapi-host": "covid-19-data.p.rapidapi.com",
+                        "x-rapidapi-key": "e6bd77677amsh90e6e0d99503c97p115f93jsn608379db2bc4"
+                    }
+                })
+                console.log(response);
+                const covidarr = await response.json();
+                console.log(covidarr);
+                const covidstats = covidarr[0];
+                document.getElementById("confirmed").textContent = covidstats["confirmed"];
+                document.getElementById("deaths").textContent = covidstats["deaths"];
+                document.getElementById("recovered").textContent = covidstats["recovered"];
+            }
+            getcovid();
+        </script>
     </div>
     <script>
         var nathanVar = 0;
