--- a/templates/aboutreem.html
+++ b/templates/aboutreem.html
@@ -4,11 +4,77 @@
 {%  set project = "Reem" %}
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Reem</title>
+    {% block background %}
+        <style>
+            html, body{
+                background-color: lightseagreen;
+            }
+        </style>
+    {% endblock %}
 </head>
 {%  block body %}
     <body>
+    <div class="row">
+        <div class="col-sm">
+            <h1>Reem</h1>
+            <img src="/static/assets/reemyes.jpg" width="50%"  id="reemimg" onclick="reemImg()" >
+        </div>
+        <div class="col-sm">
+            <h1>API</h1>
+            <p>Id</p>
+            <div id="title"></div>
+            <br>
+            <p>Name</p>
+            <div id="content"></div>
+            <br>
+            <p>Caloric</p>
+            <div id="category"></div>
+            <br>
+            <p>Type</p>
+            <div id="type"></div>
+            <br>
+            <h1>Links</h1>
+            <a href="https://docs.google.com/document/d/1243B2mbRGslTk-0YRXKdKykfs6fAU5pK1LFUyJQ83vM/edit">Create Task Planning</a>
+            <br>
+            <a href="https://docs.google.com/document/d/12rQvrhtsNnlDFDhkCI9sT8w7fTD3y-4FW6W8LPLuf9w/edit">Journal</a>
 
+            <script>
+                async function getreem() {
+                    const response = await fetch("https://dietagram.p.rapidapi.com/apiFood.php", {
+                        "method": "GET",
+                        "headers": {
+                            'x-rapidapi-host': 'dietagram.p.rapidapi.com',
+                            'x-rapidapi-key': 'a2517cf9bdmshb3cb60d57e2fe79p1f907fjsna7217b3dedc7'
+                        }
+                    })
+                    console.log(response);
+                    const joke = await response.json();
+                    console.log(joke);
+                    const jokehah = joke["dishes"];
+                    document.getElementById("title").textContent = jokehah["id"];
+                    document.getElementById("content").textContent = jokehah["name"];
+                    document.getElementById("category").textContent = jokehah["caloric"];
+                    document.getElementById("type").textContent = jokehah["type"];
+                }
+                getreem();
+            </script>
+        </div>
+    </div>
+        <script>
+            var reemVar = 0;
+            function reemImg () {
+                const element = document.getElementById("reemimg");
+                if (reemVar == 0) {
+                    element.src = "/static/assets/reemno.jpg";
+                    reemVar = 1
+                }
+                else {
+                    element.src = "/static/assets/reemyes.jpg";
+                    reemVar = 0;
+                }
+            }
+        </script>
     </body>
 {% endblock %}
 </html>
