put the main image onto there

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
 
 <h1 id=mainheader> Expeditions </h1>
 
+<img id="travelmainpic"src="/static/travelmainpic.png" height="800" width="1100">
+
 
 
 <div id=container>
@@ -23,6 +25,13 @@
 {% block background %}
 
 <style>
+
+    #travelmainpic {
+        padding-top: 120px;
+        position: absolute;
+        left: 375px;
+        bottom: 7%;
+    }
 
 
     #container {
@@ -132,8 +141,8 @@
         font-size:65px;
         padding-top: 130px;
         selfalign: center;
-        left: 400px;
-        font-family: "Times New Roman";
+        left: 450px;
+        font-family: "Vibur";
     }
 
     html, body {
