--- a/templates/aboutjacob.html
+++ b/templates/aboutjacob.html
@@ -11,7 +11,7 @@
     <div class="row">
     <div class="col-sm">
         <h1>Reem</h1>
-        <img src="/static/assets/nathan2.jpg" width="50%"  id="Reemimg" onclick="ReemImg()" >
+        <img src="/static/assets/nathan2.jpg" width="50%"  id="Jacobimg" onclick="JacobImg()" >
     </div>
     <div class="col-sm">
         <h1>API</h1>
