--- a/templates/mainabout.html
+++ b/templates/mainabout.html
@@ -23,7 +23,7 @@
             height: 309px;
         }
         .reem{
-            background: url('../static/assets/reemno.jpg') no-repeat;
+            background: url('../static/assets/reemwoah.png') no-repeat;
             width: 232px;
             height: 309px;
         }
