--- a/templates/aboutreem.html
+++ b/templates/aboutreem.html
@@ -22,17 +22,14 @@
         </div>
         <div class="col-sm">
             <h1>API</h1>
-            <p>Id</p>
-            <div id="title"></div>
+            <p>Name:</p>
+            <div id="name"></div>
             <br>
-            <p>Name</p>
-            <div id="content"></div>
+            <p>Fire Type:</p>
+            <div id="damage"></div>
             <br>
-            <p>Caloric</p>
-            <div id="category"></div>
-            <br>
-            <p>Type</p>
-            <div id="type"></div>
+            <p>Cost:</p>
+            <div id="cost"></div>
             <br>
             <h1>Links</h1>
             <a href="https://docs.google.com/document/d/1243B2mbRGslTk-0YRXKdKykfs6fAU5pK1LFUyJQ83vM/edit">Create Task Planning</a>
@@ -40,27 +37,25 @@
             <a href="https://docs.google.com/document/d/12rQvrhtsNnlDFDhkCI9sT8w7fTD3y-4FW6W8LPLuf9w/edit">Journal</a>
 
             <script>
-                async function getreem() {
-                    const response = await fetch("https://dietagram.p.rapidapi.com/apiFood.php", {
+                async function getcovid() {
+                    const response = await fetch("https://valorant-weapons.p.rapidapi.com/Sidearms", {
                         "method": "GET",
                         "headers": {
-                            'x-rapidapi-host': 'dietagram.p.rapidapi.com',
+                            'x-rapidapi-host': 'valorant-weapons.p.rapidapi.com',
                             'x-rapidapi-key': 'a2517cf9bdmshb3cb60d57e2fe79p1f907fjsna7217b3dedc7'
                         }
                     })
                     console.log(response);
-                    const joke = await response.json();
-                    console.log(joke);
-                    const jokehah = joke["dishes"];
-                    document.getElementById("title").textContent = jokehah["id"];
-                    document.getElementById("content").textContent = jokehah["name"];
-                    document.getElementById("category").textContent = jokehah["caloric"];
-                    document.getElementById("type").textContent = jokehah["type"];
+                    const covidarr = await response.json();
+                    console.log(covidarr);
+                    const covidstats = covidarr["weapons"][0];
+                    document.getElementById("damage").textContent = covidstats["fire_type"];
+                    document.getElementById("name").textContent = covidstats["name"];
+                    document.getElementById("cost").textContent = covidstats["cost"];
                 }
-                getreem();
+                getcovid();
             </script>
         </div>
-    </div>
         <script>
             var reemVar = 0;
             function reemImg () {
@@ -75,6 +70,7 @@
                 }
             }
         </script>
+    </div>
     </body>
 {% endblock %}
 </html>
