added punnuapitest.html and link to it on punnu about me page

--- a/templates/linda.html
+++ b/templates/linda.html
@@ -43,10 +43,8 @@
     <p>
         <img id="myImage" src="/static/assets/punnuImages/PunnuMask.jpeg" style="height: 350px; width: auto;"  onclick="changeImage()"/>
     </p>
-    <p style="font-size: large; font-family: Baskerville; text-align: center"><i>Click Image</i></p>
+    <p style="font-size: large; font-family: Baskerville; text-align: center"><i><a href="punnuapitest">Punnu API</a></i></p>
     <script>
-
-
         function changeImage() {
             var image = document.getElementById('myImage');
             if (image.src.match("/static/assets/punnuImages/PunnuMask.jpeg")) {
