--- a/templates/linda.html
+++ b/templates/linda.html
@@ -49,6 +49,8 @@
             <p style="text-align: left"><a href="https://docs.google.com/document/d/1PGcv6fkv8A5Y1uzuN-iLSGm9CKhdWEL_fQRZyGv9ymI/edit?usp=sharing">Pair Journal</a></p>
             <p style="text-align: left"><a href="https://docs.google.com/document/d/1sZS-mU7SGq6S9c94T5OciGrEQYjoQMeJLd6lv3WhqoY/edit?usp=sharing">My Individual Journal</a></p>
             <p style="text-align: left"><a href="https://docs.google.com/document/d/1Fgip2Fr26XOBEdhVSpi1QiwjZowhopY57o4UpwbYZzo/edit?usp=sharing">StudyOwl Brainwrite</a></p>
+            <p style="text-align: left"><a href="https://docs.google.com/document/d/1OkAMgzNODur6Gtonz_EuvoDeVXUnaMvdthtZnsBjXwU/edit">TPT 0.0 Create Task</a></p>
+
 
             <!-Images Toggle->
             <p>
@@ -100,6 +102,7 @@
             <div id="clock">8:10:45</div>
 
             <script src="/static/js/clock.js"></script>
+
 
         </div>
         </div>
