--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -20,9 +20,6 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
 
             <a class="nav-link" href="/stub">Stub</a>
 
-
-
-
             <html>
             <head>
                 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,4 +28,5 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
             </head>
             <body>
+          <div/>
 </nav>
