Revert "worked on shreya.html and api"

--- a/templates/shreya.html
+++ b/templates/shreya.html
@@ -54,7 +54,7 @@
             function changeImage() {
                 var image = document.getElementById('myImage');
                 if (image.src.match("/static/assets/shreyaimages/shreya.png")) {
-                    image.src = "/static/assets/shreyaimages/shreyamask.png";
+                    image.src = "/static/assets/shreyaimages/shreyadog.jpg";
                 } else {
                     image.src = "/static/assets/shreyaimages/shreya.png";
                 }
@@ -62,9 +62,6 @@
         </script>
 
 
-    </div>
-    <div>
-        <a href="{{url_for('dictionary')}}" class="button1" style="font-family: Baskerville;font-size: large; margin-left: 45%">Here is The API</a>
     </div>
     </body>
 
