--- a/templates/adi.html
+++ b/templates/adi.html
@@ -53,7 +53,7 @@
 
 <style>
     table, td, th {
-        border: 10px solid white;
+        border: 10px solid darkslateblue;
         padding: 50px;
     }
     td, th {
@@ -67,7 +67,7 @@
 
 </style>
 
-{% set teams = stats.data %}
+{% set teamset = information.data %}
 
 <div class="-block" style="margin: 2% 25% 5%; font-family: gilroy,serif;">
     <div class="col-12" style="text-align: center;">
@@ -82,7 +82,7 @@
                 <th>Country</th>
             </tr>
 
-            {% for team in teams %}
+            {% for team in teamset %}
             <tr>
                 {% set logo = team.logo %}
                 <td><img src="{{logo}}"></td>
