massive addditions to punnuapitest.html (no longer a test, but dont want to risk problems with refactoring

--- a/templates/punnuapitest.html
+++ b/templates/punnuapitest.html
@@ -5,17 +5,46 @@
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
-
-<title>Smash Character API</title>
-<table style="border-collapse:1px; text-align: center;" >
-    <tr>
-        <th style="text-align: center">Character + Link to Character Page</th><th>Character ID</th>
-    </tr>
-    {% for i in range(30) %}
-    <tr>
-        <td><a target="_blank" href="{{ text[i].FullUrl }}">{{ text[i].Name }}</a></td><td>{{ text[i].OwnerId }}</td>
-    </tr>
-    {% endfor %}
-</table>
+<html>
+    <body>
+    <title>Smash Character API</title>
+        <table style="border-collapse: 1px;">
+            <tr>
+                <th style="height:30px;width:200px;text-align:center;">
+                    Character Name
+                </th>
+                <th style="height:30px;width:200px;text-align:center;">
+                    Character ID
+                </th>
+                <th style="height:30px;width:200px;text-align:center;">
+                    Color Theme (hexcode)
+                </th>
+                <th style="height:30px;width:200px;text-align:center;">
+                    Image + Link
+                </th>
+            </tr>
+            {% for i in range(10) %}
+            <tr>
+                <td style="height:30px;width:30px;text-align:center;">
+                    <a target="_blank" href="{{ text[i].FullUrl }}">
+                        {{ text[i].Name }}
+                    </a>
+                </td>
+                <td style="text-align:center;">
+                    {{ text[i].OwnerId }}
+                </td>
+                <td style="text-align:center;">
+                    {{ text[i].ColorTheme }}
+                </td>
+                <td style="text-align:center; horiz-align: center;">
+                    <a target="_blank" href="{{ text[i].FullUrl }}">
+                        <img src ="{{ text[i].ThumbnailUrl }}" height="80" >
+                    </a>
+                </td>
+            </tr>
+            {% endfor %}
+        </table>
 
 {% endblock %}
+    </body>
+</html>
