--- a/templates/divya.html
+++ b/templates/divya.html
@@ -7,16 +7,15 @@
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
-    <!- Try building a new body here ->
-    <h1><center>Divyanshi</center></h1>
-    <body style="background-color:lightcoral;">
-</div>
+<!- Try building a new body here ->
+<h1><center>Divyanshi</center></h1>
+<body style="background-color:lightcoral;">
 <p align="center">
     <iframe
             width="1000"
             height="500"
-            src="https://docs.google.com/document/d/1v4dmPa2CQaX8GSf0YmcSUG9yk1GqDXRRTICu1DzH1yA/edit?usp=sharing"
-    ></iframe>
+            src="https://docs.google.com/document/d/1v4dmPa2CQaX8GSf0YmcSUG9yk1GqDXRRTICu1DzH1yA/edit?usp=sharing">
+    </iframe>
 </p>
 <button onclick="MaskOnOff()" class="center">Mask On/Off</button>
 <style>
@@ -26,17 +25,26 @@
         margin-right: auto;
     }
 </style>
-</p>
-<img id="MaskOn" src=".." style="max-height: 500px;" class="center">
-<style>
-    .center {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-</style>
+
+<div>
+    <img id="MaskOn" src=".." style="max-height: 500px;" class="center">
+    <style>
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
+    <h1> Look at some the quotes </h1>
+    <ul>
+        {% for quote in quotes %}
+        <li class="organization"> {{quote}} </li>
+        <br>
+        {% endfor %}
+    </ul>
 </div>
-    </div>
+</body>
+
 
 {% endblock %}
 <!- This is turning off birds background from base.html -->
