--- a/templates/linda.html
+++ b/templates/linda.html
@@ -55,6 +55,12 @@
         }
     </script>
 </div>
+    <br>
+    <a href="https://docs.google.com/document/d/1OCl1CWA4lm_ulO1LmSvhFY0vk0bn3JAZ5PvuIuloMRI/edit?usp=sharing">My Journal</a>
+    <br>
+    <a href="https://docs.google.com/document/d/1ADyls7G7nSNeCyXoheMb-1PMnYpm7z96dyg9RLofUFo/edit?usp=sharing">Pair-Share Journal</a>
+    <br>
+    <a href="https://github.com/PunarvasuS">My GitHub Profile</a>
 </div>
 </body>
 
