--- a/templates/shreya.html
+++ b/templates/shreya.html
@@ -60,11 +60,17 @@
                 }
             }
         </script>
-
-
     </div>
-    <div>
-        <a href="{{url_for('dictionary')}}" class="button1" style="font-family: Baskerville;font-size: large; margin-left: 45%">Here is The API</a>
+    <a href="{{url_for('dictionary')}}" class="button1" style="font-family: Baskerville;font-size: large; margin-left: 45%">Here is The API</a>
+    <div style="text-align: center">
+        <br>
+
+        <br>
+        <a href="https://docs.google.com/document/d/1kiNPT2VoJIwpsf-8tR-1t58_ihXYbHytcyO2m-8JxU0/edit?usp=sharing">My Journal</a>
+        <br>
+        <a href="https://docs.google.com/document/d/19XB2QXhh55YSZJ4m368AKi0JUGVT9s94BOA-rs2YWdQ/edit?usp=sharing">Pair-Share Journal</a>
+        <br>
+        <a href="https://github.com/shreya-ahujaa">My GitHub Profile</a>
     </div>
     </body>
 
