--- a/templates/sonakshi.html
+++ b/templates/sonakshi.html
@@ -46,7 +46,7 @@
     <br>
 
     <p style="font-size: large; font-family: Baskerville; text-align: center"><i>Click Me</i></p>
-    <a href="{{url_for('newapi')}}" class="button1">Here is The API</a>
+
 
     <img id="myImage" onclick="changeImage()" src="/static/assets/sonakshi.png" width="250" height="250">
 
@@ -60,8 +60,14 @@
             }
         }
     </script>
-
-
+    <br>
+    <a href="{{url_for('newapi')}}" class="button1">Here is The API</a>
+    <br>
+    <a href="https://docs.google.com/document/d/1tzKxrktNmIau5yW4qIBZ5nULiQ-DUNyJaQTLDgQ4XXU/edit">My Journal</a>
+    <br>
+    <a href="https://docs.google.com/document/d/19XB2QXhh55YSZJ4m368AKi0JUGVT9s94BOA-rs2YWdQ/edit?usp=sharing">Pair-Share Journal</a>
+    <br>
+    <a href="https://github.com/sonakshibhalla">My GitHub Profile</a>
 </div>
 </body>
 
