added api feature to my about me page

--- a/templates/divya.html
+++ b/templates/divya.html
@@ -35,7 +35,7 @@
             margin-right: auto;
         }
     </style>
-    <h1> Look at some the quotes </h1>
+    <h1> Look at some of the quotes below by famous people </h1>
     <ul>
         {% for quote in quotes %}
         <li class="organization"> {{quote}} </li>
