extended the pink background of the page

--- a/templates/divya.html
+++ b/templates/divya.html
@@ -9,7 +9,7 @@
 {% block body %}
 <!- Try building a new body here ->
 <h1><center>Divyanshi</center></h1>
-<body style="background-color:lightcoral;">
+<body style="background-color:lightcoral;min-height:300%">
 <p>
     <button onclick="MaskOnOff()" class="center">Mask On/Off</button>
     <style>
@@ -30,7 +30,7 @@
         }
     </style>
 </div>
-</p> align="center">
+</p>
     <iframe
             width="1000"
             height="500"
