alice about me page

--- a/templates/alice.html
+++ b/templates/alice.html
@@ -62,11 +62,11 @@
             const settings = {
                 "async": true,
                 "crossDomain": true,
-                "url": "https://demotivational-quotes.p.rapidapi.com/api/quotes/all",
+                "url": "https://matchilling-chuck-norris-jokes-v1.p.rapidapi.com/jokes/random",
                 "method": "GET",
                 "headers": {
-                    "x-rapidapi-host": "demotivational-quotes.p.rapidapi.com",
-                    "x-rapidapi-key": "f877084053msh82cfa972b631ab7p1c4893jsn442e2f514bb0"
+                    "x-rapidapi-host": "matchilling-chuck-norris-jokes-v1.p.rapidapi.com",
+                    "x-rapidapi-key": "644e68648emsh4cd27460fc55318p1db393jsn3ea02f46215c"
                 }
             };
 
@@ -77,16 +77,6 @@
         }
     </script>
 
-
-
-
-<!-- <p>Random Cat Fact : {   { output[0].text }}</p>
-<span id="mynumber"></span>
-
-<script>
-    var number = int(Math.floor(Math.random() * 5)) ;
-    document.getElementById("mynumber").innerHTML = output[0].text ;
-</script> -->
 
     </head>
 
