--- a/templates/linda.html
+++ b/templates/linda.html
@@ -64,6 +64,12 @@
 
             <div id="display-quote" style="margin-top: 10px;font-size: 29px;color: white;font-weight: 600;">No quote yet</div>
 
+            <br>
+
+            <!- Translation Api ->
+            <p>Translation Api (from English to Spanish; don't use over 300 times in a month)</p>
+            <input type="text" id="english"> <button style=" margin-top: 20px; height: 35px; width: 130px; background: white; color: black;" id="translate" onclick="translateIt()">Translate</button>
+            <div style="color: white"id="spanish"></div>
 
             <!-Todo List->
             <button id="show-todo" onclick="showTodo()">Show Todo List</button>
