--- a/templates/linda.html
+++ b/templates/linda.html
@@ -20,6 +20,11 @@
             background-color: whitesmoke;
             color: black;
         }
+        .navbar{
+            z-index: 900;
+            width: 100%;
+            margin-bottom: 15px;
+        }
     </style>
 
     <div id="video_wrapper">
