Update Individual Homepage

--- a/templates/linda.html
+++ b/templates/linda.html
@@ -2,7 +2,7 @@
 {% block body %}
     <!DOCTYPE html>
 
-<link rel="stylesheet" type="text/css" href="/static/css/linda.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/linda.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/static/js/linda.js"></script>
     <body>
@@ -51,10 +51,12 @@
             </form>
 
             <!-Links->
-            <p style="text-align: left"><a href="https://docs.google.com/document/d/1PGcv6fkv8A5Y1uzuN-iLSGm9CKhdWEL_fQRZyGv9ymI/edit?usp=sharing">Pair Journal</a></p>
-            <p style="text-align: left"><a href="https://docs.google.com/document/d/1sZS-mU7SGq6S9c94T5OciGrEQYjoQMeJLd6lv3WhqoY/edit?usp=sharing">My Individual Journal</a></p>
-            <p style="text-align: left"><a href="https://docs.google.com/document/d/1Fgip2Fr26XOBEdhVSpi1QiwjZowhopY57o4UpwbYZzo/edit?usp=sharing">StudyOwl Brainwrite</a></p>
-            <p style="text-align: left"><a href="https://docs.google.com/document/d/1OkAMgzNODur6Gtonz_EuvoDeVXUnaMvdthtZnsBjXwU/edit">TPT 0.0 Create Task</a></p>
+            <p style="text-align: left; color: #33268a; background-color:rgba(255,255,255,0.7);"> Links to my Work:
+                <a href="https://docs.google.com/document/d/1PGcv6fkv8A5Y1uzuN-iLSGm9CKhdWEL_fQRZyGv9ymI/edit?usp=sharing">Pair Journal</a>
+                <a href="https://docs.google.com/document/d/1sZS-mU7SGq6S9c94T5OciGrEQYjoQMeJLd6lv3WhqoY/edit?usp=sharing">Individual Journal</a>
+                <a href="https://docs.google.com/document/d/1Fgip2Fr26XOBEdhVSpi1QiwjZowhopY57o4UpwbYZzo/edit?usp=sharing">StudyOwl Brainwrite</a>
+                <a href="https://docs.google.com/document/d/1OkAMgzNODur6Gtonz_EuvoDeVXUnaMvdthtZnsBjXwU/edit">TPT 0.0 Create Task</a>
+            </p>
 
 
             <!-Images Toggle->
@@ -105,11 +107,9 @@
             <div class="container" id="clock">
 
                 <meta charset="UTF-8" />
-                <meta name="viewport" content=
-                        "width=device-width,
-        initial-scale=1.0" />
+                <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-            <link rel="stylesheet" href="/static/css/linda.css">
+
 
             <div id="clock">8:10:45</div>
 
