--- a/templates/adi.html
+++ b/templates/adi.html
@@ -67,7 +67,7 @@
 
 </style>
 
-{% set teamset = information.data %}
+{% set teamset = stats.data %}
 
 <div class="-block" style="margin: 2% 25% 5%; font-family: gilroy,serif;">
     <div class="col-12" style="text-align: center;">
