--- a/templates/alice.html
+++ b/templates/alice.html
@@ -19,8 +19,9 @@
                 <a id="journal" href="https://www.figma.com/file/9CvmDXms787Ban053NP0Gf/StudyOwl?node-id=4%3A2">StudyOwl Wireframes,</a>
                 <a id="journal" href="https://github.com/PranaviInukurti/flask_portfolio/projects/1">GitHub</a>
             </h3>
-            <button id="get-cat" style="margin-top: 20px;height: 35px" onclick="newCat()">Generate Random Cat Fact</button>
-            <div id="display-cat" style="margin-top: 10px;font-size: 29px;color: white;font-weight: 600;">No Cat Fact Generated Yet</div>
+
+            <input type = "button" style="margin-top: 20px;height: 35px" onclick = "updateText({{ output }})" value = "Generate Random Cat Fact">
+            <p> <span id="item" style="margin-top: 10px;font-size: 20px;color: white;font-weight: 600;"> </p>
 
         </div>
     </div>
@@ -46,7 +47,6 @@
 
 
 
-
     <script>
         function changeImage() {
             if (document.getElementById("imgClickAndChange").src.includes('alicewithmask'))
@@ -58,25 +58,13 @@
             }
         }
 
-        function newCat(){
-            const settings = {
-                "async": true,
-                "crossDomain": true,
-                "url": "https://matchilling-chuck-norris-jokes-v1.p.rapidapi.com/jokes/random",
-                "method": "GET",
-                "headers": {
-                    "x-rapidapi-host": "matchilling-chuck-norris-jokes-v1.p.rapidapi.com",
-                    "x-rapidapi-key": "644e68648emsh4cd27460fc55318p1db393jsn3ea02f46215c"
-                }
-            };
 
-            $.ajax(settings).done(function (response) {
-                console.log(response);
-                document.getElementById("display-cat").innerText = response.value;
-            });
+        function updateText(list) {
+
+            var x = Math.floor(Math.random() * 5);
+                document.getElementById("item").innerHTML = list[x];
         }
     </script>
-
 
     </head>
 
