alice about me page updates

--- a/templates/alice.html
+++ b/templates/alice.html
@@ -8,21 +8,21 @@
     <head>
     <div style="margin: 2% 5% 5%; text-align:center; font-family: monospace; font-size: larger" >
         <div>
-            <h1 style="background-color: #bdbde1; font-family: 'Blippo'; font-size: 22px; text-align: center; padding: 15px; color: #33268a;">This is Alice Tang's Individual Homepage</h1>
-            <p style="background-color: #bdbde1">Hello there <span id="myName">{{name}}</span>, welcome!</p>
+            <h1 style="background-color: #bdbde1; font-family: 'Blippo'; font-size: 22px; text-align: center; padding: 15px; color: #33268a;">Hello <span id="myName">{{name}}</span>, welcome to Alice Tang's Individual Homepage</h1>
             <form action="/alice/" id="alice" method="POST" >
-                <label for="name">Enter Your Name!</label>
+                <label for="name">Enter Your Name</label>
                 <input name="name" id="name">
-                <input type="submit" value="Go!" onclick="(function (){document.getElementById('myName').innerText=document.getElementById('name').value})();return false;">
+                <input type="submit" value="Submit" onclick="(function (){document.getElementById('myName').innerText=document.getElementById('name').value})();return false;">
             <p style="background-color: #bdbde1">
                 <img src="/static/assets/alicewithmask.jpg" style="height: 300px; width: 300px;" id="imgClickAndChange" onclick="changeImage()"/>
             </p>
-            <h2 style="background-color: #bdbde1; font-family: 'Blippo'; font-size: 15px; text-align: center; padding: 10px; color: #33268a;">Click the image!</h2>
+            <h2 style="background-color: #bdbde1; font-family: 'Blippo'; font-size: 15px; text-align: center; padding: 10px; color: #33268a;">Click The Image</h2>
             <h3 style="background-color: #bdbde1; font-family: 'Blippo'; font-size: 20px; text-align: left; padding: 15px; color: #33268a;">Trimester 2 Resources:
                 <a id="journal" href="https://docs.google.com/document/d/1mfrMqXhbkRceC4fq3nXZMLD8jo5IjC2mwAsvpqjQX94/edit?usp=sharing">Daily Journal,</a>
                 <a id="journal" href="https://docs.google.com/document/d/1Fgip2Fr26XOBEdhVSpi1QiwjZowhopY57o4UpwbYZzo/edit?usp=sharing">StudyOwl Brainwrite,</a>
                 <a id="journal" href="https://www.figma.com/file/9CvmDXms787Ban053NP0Gf/StudyOwl?node-id=4%3A2">StudyOwl Wireframes,</a>
-                <a id="journal" href="https://github.com/PranaviInukurti/flask_portfolio/projects/1">GitHub</a>
+                <a id="journal" href="https://github.com/PranaviInukurti/flask_portfolio/projects/1">Scrumboard,</a>
+                <a id="journal" href="https://docs.google.com/document/d/1jqSmPGZp010aKjpgRza4ZbyCGSJQ98Sgqt3Yqi5XQDw/edit?usp=sharing">Create Task TPT</a>
             </h3>
 
             <input type = "button" style="margin-top: 20px;height: 35px" onclick = "updateText({{ output }})" value = "Generate Random Cat Fact">
