--- a/templates/comic_books.html
+++ b/templates/comic_books.html
@@ -1,1 +1,11 @@
+{% include "layouts/navbar.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Comic Books</title>
+</head>
+<body>
 
+</body>
+</html>
